--- a/UserManagement.Web/Views/Users/List.cshtml
+++ b/UserManagement.Web/Views/Users/List.cshtml
@@ -62,7 +62,7 @@
         <a asp-controller="Users" asp-action="List" asp-route-active="false" class="btn btn-default">Non Active</a>
     </div>
 
-    <a href="#" class="btn btn-primary float-end">
+    <a href="AddUser" class="btn btn-primary float-end">
         Add User
     </a>
 </div>
