--- a/UserManagement.Web/Views/Users/List.cshtml
+++ b/UserManagement.Web/Views/Users/List.cshtml
@@ -43,7 +43,7 @@
                                 Actions
                             </button>
                             <ul class="dropdown-menu" aria-labelledby="btnToggleActions">
-                                <li><a class="dropdown-item" href="#">View</a></li>
+                                <li><a class="dropdown-item" asp-controller="Users" asp-action="User" asp-route-userId="@item.Id">View</a></li>
                                 <li><a class="dropdown-item" href="#">Edit</a></li>
                                 <li><a class="dropdown-item" href="#">Delete</a></li>
                             </ul>
