--- a/UserManagement.Web/Views/Users/ViewUser.cshtml
+++ b/UserManagement.Web/Views/Users/ViewUser.cshtml
@@ -1,4 +1,4 @@
-﻿@model UserManagement.Web.Models.Users.UserListItemViewModel
+﻿@model UserManagement.Web.Models.Users.UserViewModel
 
 <h2>View User</h2>
 
