--- a/UserManagement.Web/Views/Users/List.cshtml
+++ b/UserManagement.Web/Views/Users/List.cshtml
@@ -45,7 +45,7 @@
                             <ul class="dropdown-menu" aria-labelledby="btnToggleActions">
                                 <li><a class="dropdown-item" asp-controller="Users" asp-action="User" asp-route-userId="@item.Id">View</a></li>
                                 <li><a class="dropdown-item" asp-controller="Users" asp-action="EditUserView" asp-route-userId="@item.Id">Edit</a></li>
-                                <li><a class="dropdown-item" href="#">Delete</a></li>
+                                <li><a class="dropdown-item" asp-controller="Users" asp-action="DeleteUserView" asp-route-userId="@item.Id">Delete</a></li>
                             </ul>
                         </div>
                     </td>
