--- a/UserManagement.Web/Views/Users/DeleteUser.cshtml
+++ b/UserManagement.Web/Views/Users/DeleteUser.cshtml
@@ -38,7 +38,7 @@
         Date of Birth: <a>@Model.DateOfBirth</a>
     </label>
 </div>
-<form asp-controller="Users" asp-action="DeleteUser" asp-route-userId="@Model.Id" method="post">
+<form asp-controller="Users" asp-action="DeleteUser" asp-route-id="@Model.Id" method="post">
     <div>
         <button type="submit">Delete</button>
     </div>
