--- a/UserManagement.Web/Views/Users/List.cshtml
+++ b/UserManagement.Web/Views/Users/List.cshtml
@@ -43,9 +43,9 @@
                                 Actions
                             </button>
                             <ul class="dropdown-menu" aria-labelledby="btnToggleActions">
-                                <li><a class="dropdown-item" asp-controller="Users" asp-action="User" asp-route-userId="@item.Id">View</a></li>
-                                <li><a class="dropdown-item" asp-controller="Users" asp-action="EditUserView" asp-route-userId="@item.Id">Edit</a></li>
-                                <li><a class="dropdown-item" asp-controller="Users" asp-action="DeleteUserView" asp-route-userId="@item.Id">Delete</a></li>
+                                <li><a class="dropdown-item" asp-controller="Users" asp-action="User" asp-route-id="@item.Id">View</a></li>
+                                <li><a class="dropdown-item" asp-controller="Users" asp-action="EditUser" asp-route-id="@item.Id">Edit</a></li>
+                                <li><a class="dropdown-item" asp-controller="Users" asp-action="DeleteUser" asp-route-id="@item.Id">Delete</a></li>
                             </ul>
                         </div>
                     </td>
@@ -62,7 +62,7 @@
         <a asp-controller="Users" asp-action="List" asp-route-active="false" class="btn btn-default">Non Active</a>
     </div>
 
-    <a href="AddUser" class="btn btn-primary float-end">
+    <a asp-controller="Users" asp-action="AddUserView" class="btn btn-primary float-end">
         Add User
     </a>
 </div>
